resources/public/css/datacraft.webflow.css
body {
  height: 100%;
  background-color: white;
  direction: ltr;
  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
  color: white;
  font-size: 14px;
  line-height: 20px;
}
h1 {
  margin-top: 20px;
  margin-bottom: 30px;
  font-family:'Droid Sans', sans-serif;
  color: black;
  font-size: 24px;
  line-height: 40px;
  font-weight: 400;
  text-align: left;
  text-transform: none;
}
h2 {
  height: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  font-family:'Droid Sans', sans-serif;
  color: #2a6ebb;
  font-size: 30px;
  line-height: 36px;
  font-weight: 400;
  text-transform: none;
}
h3 {
  margin-top: 30px;
  margin-bottom: 0px;
  font-family:'Droid Sans', sans-serif;
  color: #333;
  font-size: 20px;
  line-height: 30px;
  font-weight: 700;
}
h4 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-family:'Droid Sans', sans-serif;
  color: #2a6ebb;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  text-align: center;
}
h5 {
  position: relative;
  top: -10px;
  margin-top: 0px;
  margin-bottom: 10px;
  font-family:'Droid Sans', sans-serif;
  color: #a6a6a6;
  font-size: 12px;
  line-height: 20px;
  font-weight: 400;
  text-align: center;
  letter-spacing: 1px;
  text-transform: uppercase;
}
h6 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 12px;
  line-height: 18px;
  font-weight: 700;
}
h7 {
  margin-top: 50px;
  margin-bottom: 50px;
  padding-left: 1cm;
  font-family:'Droid Sans', sans-serif;
  color: #2a6ebb;
  font-size: 15px;
  line-height: 20px;
  font-weight: 400;
  text-align: left;
}
p {
  margin-top: 15px;
  margin-bottom: 5px;
  padding-right: 20px;
  padding-left: 20px;
  font-family:'Droid Sans', sans-serif;
  color: black;
  font-size: 13px;
  line-height: 20px;
  text-align: center;
}
p2 {
  margin-top: 10px;
  margin-bottom: 5px;
  padding-right: 20px;
  padding-left: 1cm;
  font-family:'Droid Sans', sans-serif;
  color: black;
  font-size: 15px;
  line-height: 20px;
  text-align: justify;
  
}
.button {
  display: block;
  margin-top: 15px;
  margin-right: 50px;
  margin-left: 50px;
  padding: 4px 15px;
  border-radius: 0px;
  background-color: #94b6dd;
  font-family:'Droid Sans', sans-serif;
  color: white;
  font-weight: 400;
  text-align: center;
  text-decoration: none;
}

.banner-button {
  position:absolute;
  right:0px;
  margin-top: 25px;
  display: inline;
  padding: 11px 38px;
  border-radius: 0px;
  background-color: #94b6dd;
  font-family:'Droid Sans', sans-serif;
  font-size: 20px;
  color: white;
  font-weight: 600;
  text-align: center;
  text-decoration: none;
}
.button:hover {
  color: #2a6ebb;
  font-weight: 700;
  text-align: center;
}

.table {
   bordering-spacing: 15px;
}

td {
  vertical-align:top;
}

.blank_row{
  height: 15px
}

.nav {
  position: static;
  overflow-x: visible;
  overflow-y: visible;
  background-color: #2a6ebb;
  font-family: Exo, sans-serif;
  color: white;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 2px;
  text-transform: uppercase;
}
.nav.nav-text-item {
  font-family:'Droid Sans', sans-serif;
}
.nav.nav-text-item:hover {
  font-weight: 700;
}
.nav.nav-text-item:focus {
  font-family:'Droid Sans', sans-serif;
  font-weight: 700;
}
.nav.nav-text-item.w--current:hover {
  color: white;
  font-weight: 700;
}
.nav.nav-text-item.w--current:focus {
  font-weight: 700;
}
.nav.top-container {
  position: fixed;
  z-index: 10;
  width: 100%;
}
.content {
  position: relative;
  left: 0px;
  top: 100px;
  right: 0px;
  bottom: 0px;
  display: block;
  min-height: 100%;
  margin-right: auto;
  margin-left: auto;
  background-color: transparent;
}
.client {
  height: 100px;
  min-width: 300px;
  float: left;
  background-color: #4d4a4a;
}
.datascientist {
  display: block;
  height: 100px;
  min-width: 300px;
  float: left;
  background-color: #5ed1bc;
}
.div3 {
  min-width: 300px;
  float: left;
  background-color: #1c0d0d;
}
.home_icon {
  display: block;
  margin-right: auto;
  margin-left: auto;
}

.row {
  margin-top: 50px;
  margin-bottom: 25px;
}
.footer {
  position: relative;
  left: 0px;
  right: 0px;
  bottom: -116px;
  z-index: 0;
  display: block;
  margin-top: 50px;
  margin-right: auto;
  margin-left: auto;
  float: none;
  background-color: #333;
  font-family: Exo, sans-serif;
  color: white;
  font-size: 12px;
  font-weight: 300;
  text-align: center;
  letter-spacing: 1px;
}
.datacraft {
  position: static;
  padding-top: 30px;
  padding-bottom: 30px;
  line-height: 24px;
}
.text-blue {
  color: #2a6ebb;
  font-weight: 700;
}
.nc-link {
  color: white;
  font-weight: 700;
  text-decoration: none;
}
.footer-link {
  color: #edbd1f;
}
.up-link {
  color: white;
  font-weight: 700;
  text-decoration: none;
}
.datacraft-text {
  font-family:'Droid Sans', sans-serif;
  color: #2a6ebb;
  font-weight: 700;
  text-decoration: none;
}
.line {
  position: relative;
  top: 10px;
  bottom: auto;
  max-height: 1px;
  min-height: 1px;
  margin-top: 30px;
  margin-bottom: 30px;
  background-color: #a6a6a6;
}
.footer-text {
  margin-top: 0px;
  margin-bottom: 0px;
  padding: 15px 30px;
  font-family:'Droid Sans', sans-serif;
  color: white;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
}
.p2 {
  display: block;
  width: 300px;
  height: 175px;
  margin-top: 15px;
  margin-right: auto;
  margin-left: auto;
  padding-top: 2px;
  padding-left: 0px;
  float: right;
  text-align: left;
}
.team-pic {
  margin-top: 25px;
}
.p3 {
  margin-top: 10px;
  padding-left: 0px;
  text-align: left;
}
.column {
  left: 10px;
  top: 10px;
  display: block;
  max-height: 200px;
  min-height: 175px;
  margin: 0px auto 20px;
  padding: 35px 0px 20px;
  border: 1px solid #c7c7c7;
}
.column.col2 {
  left: 20px;
  margin-top: 0px;
  padding-left: 0px;
}
.column.col2.col3 {
  left: 30px;
}
.case-study {
  max-width: 300px;
  margin-top: 20px;
}
.case-study.study1 {
  display: inline-block;
  width: auto;
  max-height: 75px;
}
.case-study1 {
  display: inline;
  max-width: 300px;
  float: left;
  background-color: #636363;
}
.article {
  min-width: 0px;
  margin-right: 0px;
  margin-left: -40px;
  padding-left: 0px;
  color: #2a6ebb;
  font-size: 12px;
  text-decoration: none;
  text-transform: uppercase;
  list-style-type: none;
}
.article:hover {
  color: #2a6ebb;
  font-weight: 400;
}
.article:active {
  color: #2a6ebb;
  text-decoration: none;
}
.partners {
  position: relative;
  margin-top: 20px;
  margin-right: 50px;
}
.map {
  position: relative;
  max-height: 350px;
  margin-top: 30px;
}
.text-bold {
  color: #333;
  font-size: 14px;
  font-weight: 700;
}
.some-container {
  width:940px;
  padding-left:77px;
}
.some-other-class{
  padding-top: 30px;
  padding-bottom: 30px;
}
}

.banner{
  position: relative;
  left: 0px;
  top: 100px;
  right: 100px;
  bottom: 0px;
  display: block;
  min-height: 100%;
  margin-right: auto;
  margin-left: auto;
  text-align: justify;
  background-color: transparent;
}

@media (max-width: 991px) {
  h1 {
    padding-right: 10px;
    padding-left: 10px;
    font-size: 20px;
  }
  h2 {
    text-align: center;
  }
  h3 {
    text-align: center;
  }
  h4 {
    font-size: 14px;
  }
  p {
    padding-right: 20px;
    padding-left: 20px;
  }
  .nav {
    background-color: #2a6ebb;
  }
  .row {
    position: relative;
    left: auto;
    right: 10px;
    margin-top: 0px;
    margin-right: 0px;
    margin-left: 0px;
    border-bottom-style: none;
  }
  .nav-menu.w--open {
    background-color: transparent;
  }
  .footer-text {
    padding-right: 40px;
    padding-left: 40px;
  }
  .p3 {
    padding-right: 0px;
    padding-left: 0px;
    text-align: center;
  }
  .column {
    right: 10px;
    max-height: 500px;
    padding-top: 0px;
    border-style: none;
  }
  .article {
    display: block;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
  }
}
@media (max-width: 767px) {
  h1 {
    padding-right: 20px;
    padding-left: 20px;
  }
  h3 {
    margin-left: 0px;
    text-align: center;
  }
  h4 {
    font-size: 16px;
  }
  p {
    position: static;
    display: block;
    margin-right: 20px;
    margin-left: 20px;
    padding-right: 0px;
    padding-left: 0px;
    float: none;
  }
  .line {
    margin-right: 20px;
    margin-left: 20px;
  }
  .p3 {
    margin-right: 20px;
    margin-left: 20px;
    padding-right: 0px;
    padding-left: 0px;
    text-align: center;
  }
  .column {
    position: relative;
    left: auto;
    top: auto;
    right: 10px;
    max-height: 350px;
    min-height: 100px;
    margin-right: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    padding-top: 0px;
    padding-bottom: 0px;
    border-style: none;
  }
  .article {
    position: relative;
    right: 20px;
  }
  .partners {
    position: relative;
    display: block;
    margin-right: auto;
    margin-left: auto;
  }
  .map {
    max-height: 350px;
    max-width: 507px;
    margin-right: 30px;
    margin-left: 30px;
  }
}
@media (max-width: 479px) {
  h1 {
    margin-right: 25px;
    margin-left: 25px;
    padding-right: 0px;
    padding-left: 0px;
    font-size: 20px;
    line-height: 35px;
  }
  h3 {
    margin-left: 0px;
    padding-right: 30px;
    padding-left: 30px;
  }
  h4 {
    font-size: 16px;
  }
  p {
    margin-right: 15px;
    margin-left: 15px;
  }
  .footer-text {
    padding-right: 20px;
    padding-left: 20px;
  }
  .p3 {
    padding-right: 0px;
    padding-left: 0px;
  }
  .column {
    position: relative;
    left: 10px;
    top: auto;
    right: auto;
    display: block;
    max-height: 350px;
    min-height: 120px;
  }
  .column.col-responsive {
    left: auto;
    right: 10px;
    margin-top: 20px;
  }
  .partners {
    margin-top: 30px;
  }
  .map {
    display: block;
    max-height: 400px;
    max-width: 275px;
    margin-right: auto;
    margin-left: auto;
  }
}

